--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,7 +5,9 @@
 <head>
 <link th:href="@{/style/main.css}" rel="stylesheet" />
 	<title></title>
+
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<header th:fragment="header">
 
