--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -17,7 +17,7 @@
 
 
 		<li><a th:href="@{/Chat}"> Chat</a></li>
-		<li><a th:href="@{/Resume}"> Resume</a></li>
+		<!-- <li><a th:href="@{/Resume}"> Resume</a></li> -->
 		<li><a th:href="@{/PGP}"> PGP</a></li>
 		<li><a th:href="@{/MakeAPost}"> Post</a></li>
 		<li><a th:href="@{/BlogPosts}"> Entries</a></li>
