--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,51 +1,52 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec = "http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head>
-<link th:href="@{/style/clock.css}" rel="stylesheet" />
-<link th:href="@{/style/banner.css}" rel="stylesheet" />
-	<link th:href="@{/style/main.css}" rel="stylesheet" />
+<html xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5" style="" lang="en"><head>
+	<!--<link th:href="@{/style/clock.css}" rel="stylesheet" />-->
+	<link href="/style/banner.css" rel="stylesheet">
+	<link href="/style/main.css" rel="stylesheet">
 	<title>The JLM Site</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<body><br><div id="northedge" style="height: 3em;"></div><br>
+</body>
 
-	<!-- Inserts Header html with banner from fragments-->
+<!-- Inserts Header html with banner from fragments-->
+<body style="scale: 95%;">
+<div id="top" style="display: flow-root;margin-top: ;">
+	<div class="banner_container">
+		<div id="home_banner">
+			<div id="bia" style="margin-left: 1em;position: relative;">
+				<a id="banner_link" href="/">
+					<img id="banner_imga" alt="JLM Site" src="/images/JLMWork_BAnner-V2b.png">
+				</a>
+			</div>
+			<script type="text/javascript" src="/scripts/clock.js"></script>
+			<div id="clockContainer">
+				<div id="hour" style="transform: rotate(22.5deg);"></div>
+				<div id="minute" style="transform: rotate(270deg);"></div>
+				<div id="second" style="transform: rotate(72deg);"></div>
+			</div>
+			<div id="bib" style="margin-left: 9em;/*! margin-top: padding 1vw; */position: relative;margin-bottom: 8em;">
+				<img id="banner_imgb" alt="JLM Site" src="/images/JLMWork_BAnner-V2a.png">
+			</div>
+			<div style="height: 1em;"></div>
+			<!-- <img id="banner_img" alt="JLM Site" src="/images/jlmworks.png">-->
+		</div>
 
-
-
-<div th:fragment="banner" class="banner_container">
-	<div id="home_banner">
-		<a th:href="@{/}">
-			<img id="banner_img" alt="JLM Site" src="/images/jlmworks.png">
-		</a>
 	</div>
-
-
-	<script type="text/javascript" src="/scripts/clock.js"></script>
-	<div id="clockContainer">
-		<div id="hour"></div>
-		<div id="minute"></div>
-		<div id="second"></div>
+	<!--<div style="display: block;height: 1%;width: fit-content;position: relative;"></div>-->
+	<div class="nav_container">
+		<ul id="navlinks" style="align-items:flex-start;">
+			<li><a href="/Chat"> Chat ∙</a></li>
+			<!-- <li><a th:href="@{/Resume}">Resume </a></li> -->
+			<li><a href="/PGP"> PGP ∙</a></li><li><a href="/MakeAPost"> Post ∙</a></li>
+			<li><a href="/BlogPosts"> Entries ∙</a></li>
+			<li>
+				<a href="/MyBlogPosts"> DashBoard </a>
+			</li>
+		</ul>
 	</div>
-
 </div>
-
-<ul id="navlinks">
-	<li><a th:href="@{/Chat}"> Chat</a></li>
-	<li><a th:href="@{/Resume}">Resume </a></li>
-	<li><a th:href="@{/PGP}"> PGP</a></li>
-	<li><a th:href="@{/MakeAPost}"> Post</a></li>
-	<li><a th:href="@{/BlogPosts}"> Entries</a></li>
-	<li>
-		<a th:href="@{/MyBlogPosts}"> DashBoard</a>
-	</li>
+<p></p>
 
 
-</ul>
 
-<body>
-	
-
-	
-	
-	</body>
-</html>
+</body><!--<body>--><!--<div class="banner_container">--><!--	<div id="home_banner">--><!--		<a id="banner_link" href="/">--><!--			<div id ='bib'>--><!--				<img id="banner_imga" alt="JLM Site" src="/images/JLMWork_BAnner-V2b.png">--><!--			</div>--><!--		</a>--><!--		<script type="text/javascript" src="/scripts/clock.js"></script>--><!--		<div id="clockContainer">--><!--			<div id="hour" style="transform: rotate(374.5deg);"></div>--><!--			<div id="minute" style="transform: rotate(174deg);"></div>--><!--			<div id="second" style="transform: rotate(186deg);"></div>--><!--		</div>--><!--		<div id ='bib'>--><!--			<img id="banner_imgb" alt="JLM Site" src="/images/JLMWork_BAnner-V2a.png">--><!--		</div>--><!--		&lt;!&ndash; <img id="banner_img" alt="JLM Site" src="/images/jlmworks.png">&ndash;&gt;--><!--	</div>--><!--</div>--><!--<div class="nav_container">--><!--	<ul id="navlinks">--><!--		<li><a href="/Chat"> Chat</a></li>--><!--		&lt;!&ndash; <li><a th:href="@{/Resume}">Resume </a></li> &ndash;&gt;--><!--		<li><a href="/PGP"> PGP</a></li>--><!--		<li><a href="/MakeAPost"> Post</a></li>--><!--		<li><a href="/BlogPosts"> Entries</a></li>--><!--		<li>--><!--			<a href="/MyBlogPosts"> DashBoard</a>--><!--		</li>--><!--	</ul>--><!--</div>--><!--</body>--></html>
